org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-04 (0.1.alpha5)
	- Message improvements
	- Better integration with voc2rdf
	
	- Everything working pretty nicely! :-)
	
	TODO: Unify replicated code with voc2rdf !!
	
	
	
2008-11-03 (0.1.alpha4)

	- Assign omv:creationDate with format yyyy-MM-dd'T'HH:mm:ssZ
	
	- Fixed the following: repeated attributes will come out in the resulting ontology
	(eg, multiple omv:uri entries) when the original resource already contains those
	attributes. Now, any pre-exisiting attributes that are given new values are
	not tranferred from the original source, of course.
	
	- shortName attribute handled as a special case (time contrains force to take
	  quick, not-so-elegant solutions :( 
	
	- upload: setting file extension to .owl per aquaportal requirement
	
	- hot link to uploaded ontology upon succesful submission.
	
	
2008-11-02

	- Fixed Issue 10: load a registered ontology
		- This is now completed for the case when the URI is passed as a parameter
		  ontologyUri=uuuu along with the new parameter "_edit" which should be
		  set to "_edit=y" to allow the edition of a new version of the ontology.
		  
		  (Note: the button to "load a registered ontology" is not yet implemented
		  and perhaps it shouldn't at least initially, the reasons being:
		  	- Main entry point to create a new version is the Aquaportal front-end;
		  	- This way, the user is already logged-in and in fact she can only launch
		  	  the edition of her own ontologies, so this control is already in place.
		  	  
	- Username is not shown if ontmd is launched with the userId and sessionId params.
			
		
	- some code clean-up:
		-MdHelper: removed unused stuff (AttributeValue class, title).
		
	- Fixed Issue 11: Assign DC from the Omv and OmvMmi props -- and vice versa!
	  This happens at two moments:
	  	- When an ontology is loaded: Existing DC attributes are used to fill in
	  	  missing MMI attributes.