@@ -120,29 +120,29 @@ public class MdHelper {
 			.addOption(new Option("uom", "OGC Object Type: uom"))
 			.addOption(new Option("verticalDatumType", "OGC Object Type: verticalDatumType"))
 			
-			.addOption(new Option("keyword", "Other: keyword"))
-			.addOption(new Option("parameter", "Other: parameter"))
-			.addOption(new Option("unit", "Other: unit"))
-			.addOption(new Option("organization", "Other: organization"))
-			.addOption(new Option("platform", "Other: platform"))
-			.addOption(new Option("sensor", "Other: sensor"))
-			.addOption(new Option("process", "Other: process"))
-			.addOption(new Option("missingFlag", "Other: missingFlag"))
-			.addOption(new Option("qualityFlag", "Other: qualityFlag"))
-			.addOption(new Option("qcCategory", "Other: qcCategory"))
-			.addOption(new Option("coordinateReference", "Other: coordinateReference"))
-			.addOption(new Option("datum", "Other: datum"))
-			.addOption(new Option("protocol", "Other: protocol"))
-			.addOption(new Option("metadataStandard", "Other: metadataStandard"))
-			.addOption(new Option("featureType", "Other: featureType"))
-			.addOption(new Option("featureName", "Other: featureName"))
-			.addOption(new Option("speciesType", "Other: speciesType"))
-			.addOption(new Option("speciesName", "Other: speciesName"))
-			.addOption(new Option("discipline", "Other: discipline"))
-			.addOption(new Option("place", "Other: place"))
-			.addOption(new Option("theme", "Other: theme"))
-			.addOption(new Option("roleOfContact", "Other: roleOfContact"))
-			.addOption(new Option("general", "Other: general metadata attribute"))
+			.addOption(new Option("keyword", "MMI: keyword"))
+			.addOption(new Option("parameter", "MMI: parameter"))
+			.addOption(new Option("unit", "MMI: unit"))
+			.addOption(new Option("organization", "MMI: organization"))
+			.addOption(new Option("platform", "MMI: platform"))
+			.addOption(new Option("sensor", "MMI: sensor"))
+			.addOption(new Option("process", "MMI: process"))
+			.addOption(new Option("missingFlag", "MMI: missingFlag"))
+			.addOption(new Option("qualityFlag", "MMI: qualityFlag"))
+			.addOption(new Option("qcCategory", "MMI: qcCategory"))
+			.addOption(new Option("coordinateReference", "MMI: coordinateReference"))
+			.addOption(new Option("datum", "MMI: datum"))
+			.addOption(new Option("protocol", "MMI: protocol"))
+			.addOption(new Option("metadataStandard", "MMI: metadataStandard"))
+			.addOption(new Option("featureType", "MMI: featureType"))
+			.addOption(new Option("featureName", "MMI: featureName"))
+			.addOption(new Option("speciesType", "MMI: speciesType"))
+			.addOption(new Option("speciesName", "MMI: speciesName"))
+			.addOption(new Option("discipline", "MMI: discipline"))
+			.addOption(new Option("place", "MMI: place"))
+			.addOption(new Option("theme", "MMI: theme"))
+			.addOption(new Option("roleOfContact", "MMI: roleOfContact"))
+			.addOption(new Option("general", "MMI: general metadata attribute"))
 		;
 			
 		attrGroups = new AttrGroup[] {
